# investor-reporting-app

./: LICENCE  LICENSE  README.md  app.py  pyproject.toml
.streamlit/: config.toml
investor_reporting_app/: app.py  calculations.py  utils.py
investor_reporting_app/.streamlit/: config.toml
investor_reporting_app/temporary/: calculations.py  testing.py  testing2.py
resources/: daily_prices_generic.csv
temporary/: colors.py
