[tool.poetry]
name = "investor-reporting-app"
version = "0.1.0"
description = ""
authors = ["miroslaw-steblik <miroslawsteblik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.33.0"
pandas = "^2.2.2"
plotly = "^5.22.0"
quantlib = "^1.34"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
